--- a/config.yaml
+++ b/config.yaml
@@ -134,14 +134,21 @@ pcbs:
       main:
         outline: pcb
     footprints:
-      keyswitches:
+      gateron:
+        where: true
+        what: ceoloide/switch_gateron_ks27_ks33
+        params:
+          include_keycap: true
+          solder: false
+          from: "{{column_net}}"
+          to: "{{colrow}}"
+      choc:
         where: true
         what: ceoloide/switch_choc_v1_v2
         params:
           include_keycap: true
           solder: false
           include_stabilizer_pad: false
-          choc_v1_support: false
           from: "{{column_net}}"
           to: "{{colrow}}"
       diode:
@@ -153,7 +160,8 @@ pcbs:
           from: "{{colrow}}"
           to: "{{row_net}}"
         adjust:
-          shift: [0, -0.28ky]
+          shift: [-0.34kx, 0.28ky]
+          rotate: 90
       mcu:
         what: ceoloide/mcu_supermini_nrf52840
         params:
@@ -161,7 +169,7 @@ pcbs:
           show_silk_labels: false
         where:
           ref: matrix_leftinner_top
-          shift: [0.5kx+central_offset,-0.5ky+2.7]
+          shift: [0.5kx+central_offset,-0.5ky+2.5]
       reset:
         what: ceoloide/reset_switch_smd_side
         params:
@@ -176,7 +184,7 @@ pcbs:
           side: B
         where:
           ref: matrix_leftinner_top
-          shift: [0.5kx+central_offset-6.76,8.25]
+          shift: [0.5kx+central_offset-6.82,8.25]
           rotate: 90
       battery:
         what: ceoloide/battery_connector_molex_pico_ezmate_1x02
